added flavors dev and prod for ios

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.pix_cam"
+        applicationId "com.pixelbrahma.pix_cam"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion flutter.minSdkVersion
@@ -66,12 +66,12 @@ android {
     productFlavors {
         dev {
             dimension "app"
-            applicationId "com.example.pix_cam.dev"
+            applicationId "com.pixelbrahma.pix_cam.dev"
             resValue "string", "app_name", "DEV Pix Cam"
         }
         prod {
             dimension "app"
-            applicationId "com.example.pix_cam"
+            applicationId "com.pixelbrahma.pix_cam"
             resValue "string", "app_name", "Pix Cam"
         }
     }
