--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
+    "@google-cloud/bigquery": "^6.0.3",
+    "firebase-admin": "^10.3.0",
     "firebase-functions": "^3.18.0"
   },
   "devDependencies": {
