--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
+  cloud_functions: ^4.0.7
 
 dev_dependencies:
   flutter_test:
