--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
   cloud_functions: ^4.0.7
+  syncfusion_flutter_charts: ^20.4.42
 
 dev_dependencies:
   flutter_test:
