added datepicker, working on dynamic data sow in graph

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   cloud_functions: ^4.0.7
   syncfusion_flutter_charts: ^20.4.42
+  syncfusion_flutter_datepicker: ^20.4.48
 
 dev_dependencies:
   flutter_test:
