--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,15 @@ dependencies:
   cloud_functions: ^4.0.7
   syncfusion_flutter_charts: ^20.4.42
   syncfusion_flutter_datepicker: ^20.4.48
+  dartz: ^0.10.1
+  freezed_annotation: ^2.2.0
+  flutter_bloc: ^8.1.2
+  get_it: ^7.2.0
+  injectable: ^2.1.0
+  json_annotation: ^4.8.0
+  flutter_hooks: ^0.18.5+1
+  kt_dart: ^1.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +61,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
+  injectable_generator: ^2.1.4
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
