--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_hooks: ^0.18.5+1
   kt_dart: ^1.0.0
   provider: ^6.0.5
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
