--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   kt_dart: ^1.0.0
   intl: ^0.18.0
   provider: ^6.0.5
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
