--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   kt_dart: ^1.0.0
   intl: ^0.18.0
   provider: ^6.0.5
+  syncfusion_flutter_datepicker: ^20.4.52
 
 dev_dependencies:
   flutter_test:
