month and year selection for monthly data #37

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,10 @@ dependencies:
   json_annotation: ^4.8.0
   flutter_hooks: ^0.18.5+1
   kt_dart: ^1.0.0
-  intl: ^0.18.0
+  intl: ^0.17.0
   provider: ^6.0.5
   syncfusion_flutter_datepicker: ^20.4.52
+  flutter_month_picker: ^0.0.2
 
 dev_dependencies:
   flutter_test:
